# archivechaine

./: .gitignore  API_SPECIFICATIONS.md  ARCHITECTURE.md  COMMUNICATION_FLOWS.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  ECONOMIC_SYSTEM_SUMMARY.md  NODES_IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  TESTING_STRATEGY.md
core/: Cargo.toml
core/src/: blockchain.rs  error.rs  lib.rs  serialization.rs  validation.rs
core/src/api/: auth.rs  error.rs  middleware.rs  mod.rs  server.rs  types.rs
core/src/api/graphql/: mod.rs  resolvers.rs  schema.rs  subscriptions.rs  types.rs
core/src/api/grpc/: client.rs  mod.rs  server.rs  services.rs
core/src/api/p2p/: client.rs  discovery.rs  gossip.rs  messages.rs  mod.rs  sync.rs
core/src/api/rest/: handlers.rs  mod.rs  routes.rs  validation.rs
core/src/api/websocket/: connection.rs  events.rs  handler.rs  messages.rs  mod.rs
core/src/block/: archive_metadata.rs  body.rs  header.rs  mod.rs
core/src/consensus/: bandwidth_proof.rs  leader_selection.rs  longevity_proof.rs  mod.rs  proof_of_archive.rs  rewards.rs  storage_proof.rs  validator.rs
core/src/contracts/: abi.rs  archive_bounty.rs  content_verification.rs  context.rs  gas.rs  manager.rs  mod.rs  preservation_pool.rs  runtime.rs
core/src/crypto/: hash.rs  keys.rs  mod.rs  signature.rs
core/src/nodes/: full_archive.rs  gateway.rs  health_monitor.rs  light_storage.rs  mod.rs  node_manager.rs  node_registry.rs  relay.rs
core/src/state/: machine.rs  merkle.rs  mod.rs  storage.rs
core/src/storage/: archive.rs  bandwidth.rs  discovery.rs  distribution.rs  manager.rs  metrics.rs  mod.rs  replication.rs
core/src/token/: arc_token.rs  deflation.rs  distribution.rs  economics.rs  mod.rs  rewards.rs  staking.rs  treasury.rs
core/src/transaction/: mod.rs  pool.rs  types.rs  validation.rs
core/tests/integration/: end_to_end.rs  mod.rs
docs/: API_GUIDE.md  DEVELOPER_GUIDE.md  ECONOMICS_GUIDE.md  INSTALLATION.md  NODES_GUIDE.md  OPERATIONS.md
examples/: README.md
examples/advanced/website_crawler/: README.md
examples/basic/: batch_archive.js  search_archives.rs  simple_archive.py
examples/infrastructure/docker_compose/: README.md
