[workspace]
members = [
    "core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ArchiveChain Team"]
license = "MIT"
repository = "https://github.com/archivechain/archivechain"
homepage = "https://archivechain.org"
description = "ArchiveChain - Blockchain décentralisée pour l'archivage web"

[workspace.dependencies]
# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
cbor4ii = "0.3"

# Cryptographie
blake3 = "1.5"
sha3 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Gestion du temps
chrono = { version = "0.4", features = ["serde"] }

# Erreurs
thiserror = "1.0"
anyhow = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Compression
flate2 = "1.0"
zstd = "0.13"

# Logs
tracing = "0.1"
tracing-subscriber = "0.3"

# Tests
proptest = "1.4"